Changed form in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -430,16 +430,16 @@ ul {
 .footer-link:focus {
   background-color: var(--green);
 }
-.footer-form .form {
+.footer-form {
   display: flex;
   gap: 16px;
   align-items: flex-end;
 }
-.form-filed {
+.footer-form-filed {
   display: flex;
   flex-direction: column;
 }
-.form-name {
+.footer-subscribe {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -447,7 +447,7 @@ ul {
   letter-spacing: 0.02em;
   color: var(--white);
 }
-.form-mail {
+.footer-form-mail {
   min-width: 268px;
   height: 40px;
   padding: 8px 16px;
