--- a/css/styles.css
+++ b/css/styles.css
@@ -424,9 +424,10 @@ ul {
   display: flex;
   gap: 16px;
 }
-.footer .footer-container {
+.footer-container {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .footer-link:hover,
@@ -448,7 +449,6 @@ ul {
   letter-spacing: 0.02em;
   color: var(--white);
 }
-
 .footer-form-input {
   min-width: 268px;
   height: 40px;
@@ -715,6 +715,7 @@ ul {
 /* Modal form */
 .form-wrapper {
   position: relative;
+  margin-bottom: 8px;
 }
 .modal-title {
   display: block;
@@ -738,7 +739,6 @@ ul {
 .form-input {
   width: 100%;
   height: 40px;
-  margin-bottom: 8px;
   padding: 0 38px;
   border: 1px solid var(--navy-blue-modal);
   border-radius: 4px;
